# Personal-Blog

./: README.md  app.py  pyproject.toml
data/: posts.json
personal_blog/controller/: auth_controller.py  post_controller.py
personal_blog/models/: forms.py  post.py
personal_blog/views/templates/: admin.html  base.html  edit.html  home.html  login.html  new.html  post_content.html
static/css/: admin.css  global.css  home.css
