[tool.poetry]
name = "personal-blog"
version = "0.1.0"
description = ""
authors = ["Edcarloszaya <edcarlos.molequedoido@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "*"
flask-wtf = "^1.2.1"
flask-httpauth = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
